--- a/index.html
+++ b/index.html
@@ -2,368 +2,156 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>OTT Wallah — Stream & Save</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="./style.css" />
+  <title>OTT WALLAH — Apps, Courses & Editing Tools</title>
 
-  <style>
-    body {
-      background: #0a0a0a;
-      color: white;
-      font-family: 'Poppins', sans-serif;
-    }
-
-    /* HEADER */
-    .header {
-      background: rgba(0,0,0,.55);
-      border-bottom: 1px solid rgba(255,255,255,.08);
-      position: sticky;
-      top: 0;
-      z-index: 999;
-      backdrop-filter: blur(10px);
-    }
-    .brand-badge {
-      background: #e11d2f;
-      padding: 10px 16px;
-      border-radius: 10px;
-      font-weight: 900;
-    }
-    .header-inner {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 14px 0;
-    }
-    .btn {
-      padding: 10px 18px;
-      background: rgba(255,255,255,.1);
-      border: 1px solid rgba(255,255,255,.2);
-      border-radius: 8px;
-      font-weight: 600;
-      transition: .2s;
-    }
-    .btn:hover {
-      background: rgba(255,255,255,.2);
-      transform: scale(1.05);
-    }
-
-    /* HERO */
-    .home-hero {
-      text-align: center;
-      padding: 64px 16px 24px;
-    }
-    .home-hero h1 {
-      font-size: 42px;
-      font-weight: 900;
-      margin-bottom: 15px;
-    }
-    .home-hero p {
-      opacity:.85;
-      max-width: 720px;
-      margin: 0 auto;
-      line-height: 1.6;
-    }
-
-    /* CATEGORY CARDS */
-    .cat-grid {
-      margin: 40px auto 70px;
-      display: grid;
-      gap: 24px;
-      grid-template-columns: repeat(3, 1fr);
-    }
-    @media (max-width: 900px){
-      .cat-grid { grid-template-columns: repeat(2,1fr); }
-    }
-    @media (max-width: 640px){
-      .cat-grid { grid-template-columns: 1fr; }
-    }
-
-    .cat-card {
-      background: linear-gradient(180deg, rgba(255,255,255,.07), rgba(255,255,255,.03));
-      border: 1px solid rgba(255,255,255,.12);
-      border-radius: 16px;
-      padding: 28px;
-      text-align: left;
-      box-shadow: 0 18px 30px rgba(0,0,0,.40);
-      backdrop-filter: blur(12px);
-      transition: .25s;
-      position: relative;
-      overflow: hidden;
-      text-decoration: none;
-      color: white;
-    }
-    .cat-card:hover {
-      transform: translateY(-5px) scale(1.03);
-      border-color: rgba(255,255,255,.3);
-      box-shadow: 0 25px 50px rgba(0,0,0,.55);
-    }
-
-    .cat-icon {
-      width: 62px;
-      height: 62px;
-      border-radius: 14px;
-      background: #111;
-      border: 1px solid #222;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 30px;
-    }
-    .cat-title {
-      margin: 18px 0 6px;
-      font-size: 24px;
-      font-weight: 800;
-    }
-    .cat-sub {
-      opacity:.7;
-      line-height: 1.5;
-    }
-    .cat-cta {
-      margin-top: 16px;
-      display: inline-flex;
-      gap: 6px;
-      background: #e11d2f;
-      padding: 9px 16px;
-      border-radius: 100px;
-      font-weight: 700;
-      font-size: 14px;
-    }
-
-    /* SECTION HEADINGS */
-    .section-title {
-      font-size: 30px;
-      font-weight: 800;
-      margin: 50px 0 18px;
-      text-align: center;
-    }
-
-    /* PRODUCT GRID */
-    .prod-grid {
-      display: grid;
-      gap: 22px;
-      grid-template-columns: repeat(4, 1fr);
-      margin-bottom: 60px;
-    }
-    @media(max-width:1000px){
-      .prod-grid { grid-template-columns: repeat(3,1fr); }
-    }
-    @media(max-width:700px){
-      .prod-grid { grid-template-columns: repeat(2,1fr); }
-    }
-    @media(max-width:500px){
-      .prod-grid { grid-template-columns: 1fr; }
-    }
-
-    .prod-card {
-      background: rgba(255,255,255,.06);
-      border: 1px solid rgba(255,255,255,.15);
-      border-radius: 14px;
-      padding: 22px;
-      text-align: center;
-      transition: .25s;
-    }
-    .prod-card:hover {
-      transform: translateY(-5px);
-      border-color: #e11d2f;
-    }
-    .prod-card img {
-      height: 60px;
-      object-fit: contain;
-    }
-    .price {
-      margin: 10px 0;
-      color: #e11d2f;
-      font-size: 20px;
-      font-weight: 700;
-    }
-
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+  <!-- ===== HEADER / NAV ===== -->
+  <header class="header">
+    <div class="container nav">
+      <a class="logo" href="#"><i class="ri-clapperboard-fill"></i> OTT <span>WALLAH</span></a>
 
-<!-- HEADER -->
-<header class="header">
-  <div class="container header-inner">
-    <div class="brand">
-      <div class="brand-badge">OW</div>
-      <div style="margin-left:10px;">
-        <div style="font-size:18px; font-weight:900;">OTT WALLAH</div>
-        <div class="small">Premium OTT • Editing • Courses</div>
+      <nav class="nav-links" id="navLinks">
+        <a href="#apps">OTT Apps</a>
+        <a href="#courses">Courses</a>
+        <a href="#tools">Editing Tools</a>
+        <a href="#faq">FAQ</a>
+        <button class="btn btn-outline" id="loginBtn">
+          <i class="ri-user-3-line"></i> Login
+        </button>
+      </nav>
+
+      <button class="hamb" id="hamb"><i class="ri-menu-3-line"></i></button>
+    </div>
+  </header>
+
+  <!-- ===== HERO (Animated Banner) ===== -->
+  <section class="hero">
+    <div class="hero__bg"></div>
+    <div class="container hero__content">
+      <h1>All-in-One <span>OTT Apps</span>, <span>Courses</span> & <span>Editing Tools</span></h1>
+      <p>Premium content, lifetime access, and lightning-fast delivery — ek hi jagah.</p>
+      <div class="hero__cta">
+        <a href="#apps" class="btn btn-primary"><i class="ri-flashlight-fill"></i> Explore Now</a>
+        <button class="btn btn-dark" id="openLogin"><i class="ri-google-fill"></i> Login with Google</button>
+      </div>
+      <div class="hero__stats">
+        <div><strong>5000+</strong><span>Happy Users</span></div>
+        <div><strong>4.9/5</strong><span>Avg. Rating</span></div>
+        <div><strong>24x7</strong><span>Support</span></div>
       </div>
     </div>
-
-    <div class="header-actions">
-      <a class="btn" href="login.html">Login</a>
-      <a class="btn" href="cart.html">Cart <span id="cartCount"></span></a>
-    </div>
-  </div>
-</header>
-
-<main class="container">
-
-  <!-- HERO -->
-  <section class="home-hero">
-    <h1>All your subscriptions in one premium place</h1>
-    <p>Explore 40+ OTT platforms, top editing apps, and online courses — in a sleek red-black premium interface.</p>
   </section>
 
-  <!-- CATEGORY CARDS -->
-  <section class="cat-grid">
-
-    <a class="cat-card" href="ott.html">
-      <div class="cat-icon">🎬</div>
-      <div class="cat-title">OTT Platforms</div>
-      <div class="cat-sub">Netflix, Prime Video, Disney+ Hotstar, SonyLIV, Zee5 + more</div>
-      <div class="cat-cta">Browse OTT →</div>
-    </a>
-
-    <a class="cat-card" href="editing.html">
-      <div class="cat-icon">🎨</div>
-      <div class="cat-title">Editing Tools</div>
-      <div class="cat-sub">Canva Pro, Photoshop, Lightroom, Premiere Pro</div>
-      <div class="cat-cta">Browse Tools →</div>
-    </a>
-
-    <a class="cat-card" href="courses.html">
-      <div class="cat-icon">📚</div>
-      <div class="cat-title">Online Courses</div>
-      <div class="cat-sub">Coursera, Udemy, LinkedIn Learning & More</div>
-      <div class="cat-cta">Browse Courses →</div>
-    </a>
-
+  <!-- ===== ROW / SLIDER (Reusable) ===== -->
+  <section class="section" id="apps">
+    <div class="container section__head">
+      <h2><i class="ri-tv-2-fill"></i> OTT Apps</h2>
+      <div class="row__controls">
+        <button class="row-btn prev" data-target="row-apps"><i class="ri-arrow-left-s-line"></i></button>
+        <button class="row-btn next" data-target="row-apps"><i class="ri-arrow-right-s-line"></i></button>
+      </div>
+    </div>
+    <div class="container row" id="row-apps"></div>
   </section>
 
-  <!-- SECTION: TRENDING OTT -->
-  <h2 class="section-title">🔥 Trending OTT Platforms</h2>
-  <div class="prod-grid">
-
-    <div class="prod-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg">
-      <h4>Netflix</h4>
-      <div class="price">₹149/mo</div>
+  <section class="section" id="courses">
+    <div class="container section__head">
+      <h2><i class="ri-graduation-cap-fill"></i> Courses</h2>
+      <div class="row__controls">
+        <button class="row-btn prev" data-target="row-courses"><i class="ri-arrow-left-s-line"></i></button>
+        <button class="row-btn next" data-target="row-courses"><i class="ri-arrow-right-s-line"></i></button>
+      </div>
     </div>
+    <div class="container row" id="row-courses"></div>
+  </section>
 
-    <div class="prod-card">
-      <img src="https://upload.wikimedia.org/wikipedia/en/3/3b/SonyLIV_2020.png">
-      <h4>SonyLIV</h4>
-      <div class="price">₹99/mo</div>
+  <section class="section" id="tools">
+    <div class="container section__head">
+      <h2><i class="ri-scissors-2-fill"></i> Editing Tools</h2>
+      <div class="row__controls">
+        <button class="row-btn prev" data-target="row-tools"><i class="ri-arrow-left-s-line"></i></button>
+        <button class="row-btn next" data-target="row-tools"><i class="ri-arrow-right-s-line"></i></button>
+      </div>
     </div>
+    <div class="container row" id="row-tools"></div>
+  </section>
 
-    <div class="prod-card">
-      <img src="https://upload.wikimedia.org/wikipedia/en/2/22/ZEE5_logo.png">
-      <h4>ZEE5</h4>
-      <div class="price">₹399/yr</div>
+  <!-- ===== FAQ ===== -->
+  <section class="section" id="faq">
+    <div class="container">
+      <h2><i class="ri-questionnaire-fill"></i> Frequently Asked Questions</h2>
+      <div class="faq">
+        <details>
+          <summary>Delivery kaise hoti hai?</summary>
+          <p>Payment ke turant baad email / WhatsApp pe product access mil jata hai.</p>
+        </details>
+        <details>
+          <summary>Refund policy?</summary>
+          <p>Digital products ke liye refund nahi — lekin support 24x7 available hai.</p>
+        </details>
+        <details>
+          <summary>Login kaise karu?</summary>
+          <p>Top right pe “Login” dabao ya yahan se <a href="/auth/google">Google Login</a> karo.</p>
+        </details>
+      </div>
     </div>
+  </section>
 
-    <div class="prod-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Prime_Video.png">
-      <h4>Prime Video</h4>
-      <div class="price">₹899/yr</div>
+  <!-- ===== FOOTER ===== -->
+  <footer class="footer">
+    <div class="container footer__grid">
+      <div>
+        <a class="logo" href="#"><i class="ri-clapperboard-fill"></i> OTT <span>WALLAH</span></a>
+        <p>Premium apps, courses, aur tools — best price par.</p>
+      </div>
+      <div>
+        <h4>Links</h4>
+        <a href="#apps">OTT Apps</a>
+        <a href="#courses">Courses</a>
+        <a href="#tools">Editing Tools</a>
+      </div>
+      <div>
+        <h4>Support</h4>
+        <a href="mailto:support@ottwallah.com">support@ottwallah.com</a>
+        <a href="https://wa.me/919999999999" target="_blank">WhatsApp Support</a>
+      </div>
     </div>
+    <p class="copy">© <span id="yr"></span> OTT WALLAH • All rights reserved.</p>
+  </footer>
 
-  </div>
-
-  <!-- SECTION: EDITING TOOLS -->
-  <h2 class="section-title">🎨 Popular Editing Tools</h2>
-  <div class="prod-grid">
-
-    <div class="prod-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Canva_Logo.png">
-      <h4>Canva Pro</h4>
-      <div class="price">₹199/yr</div>
-    </div>
-
-    <div class="prod-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Adobe_Photoshop_Mobile_icon.svg">
-      <h4>Photoshop</h4>
-      <div class="price">₹499/yr</div>
-    </div>
-
-    <div class="prod-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/40/Adobe_Premiere_Pro_CC_icon.svg">
-      <h4>Premiere Pro</h4>
-      <div class="price">₹499/yr</div>
-    </div>
-
-    <div class="prod-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/56/Adobe_Photoshop_Lightroom_CC_logo.svg">
-      <h4>Lightroom</h4>
-      <div class="price">₹499/yr</div>
-    </div>
-
-  </div>
-
-  <!-- SECTION: COURSES -->
-  <h2 class="section-title">📚 Top Online Courses</h2>
-  <div class="prod-grid">
-
-    <div class="prod-card">
-      <img src="https://about.coursera.org/static/img/og/coursera-logo-social.png">
-      <h4>Coursera</h4>
-      <div class="price">₹999/mo</div>
-    </div>
-
-    <div class="prod-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png">
-      <h4>LinkedIn Learning</h4>
-      <div class="price">₹199/yr</div>
-    </div>
-
-    <div class="prod-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Udemy_logo.svg">
-      <h4>Udemy</h4>
-      <div class="price">₹399/mo</div>
-    </div>
-
-    <div class="prod-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Skillshare_logo_2020.svg">
-      <h4>Skillshare</h4>
-      <div class="price">₹299/mo</div>
-    </div>
-
-  </div>
-
-</main>
-
-<!-- FOOTER -->
-<footer class="footer">
-  <div class="container cols">
-    <div>
-      <h3>Why OTT Wallah?</h3>
-      <p class="small">We list the best plans across OTT, Editing & Courses — premium red/black UI.</p>
-    </div>
-
-    <div>
-      <h4>Support</h4>
-      <p class="small">Helpline: +91 9837777006</p>
-      <p class="small">Email: rajsarswata1@gmail.com</p>
-    </div>
-
-    <div>
-      <h4>Legal</h4>
-      <p class="small"><a href="#">Terms & Conditions</a></p>
-      <p class="small"><a href="#">Privacy Policy</a></p>
-    </div>
-
-    <div>
-      <h4>Account</h4>
-      <p class="small"><a href="login.html">Login</a></p>
-      <p class="small"><a href="dashboard.html">Dashboard</a></p>
+  <!-- ===== LOGIN MODAL ===== -->
+  <div class="modal" id="loginModal" aria-hidden="true">
+    <div class="modal__dialog">
+      <button class="modal__close" id="closeLogin"><i class="ri-close-line"></i></button>
+      <h3>Welcome back!</h3>
+      <p>Login to access your purchases, downloads & dashboard.</p>
+      <a class="btn btn-google" href="/auth/google">
+        <i class="ri-google-fill"></i> Continue with Google
+      </a>
+      <div class="or"><span>or</span></div>
+      <form class="mini-form" onsubmit="return false;">
+        <input type="email" placeholder="Email address" required />
+        <button class="btn btn-dark" type="submit">Get Magic Link</button>
+      </form>
+      <p class="muted">By continuing, you agree to our Terms & Privacy.</p>
     </div>
   </div>
-  <div class="meta">© 2025 OTT Wallah — All rights reserved</div>
-</footer>
 
-<script>
-function getCart(){ return JSON.parse(localStorage.getItem('cart')||'[]'); }
-function updateCartCount(){
-  let c = getCart();
-  let el = document.getElementById("cartCount");
-  if(el) el.textContent = c.length ? `(${c.length})` : "";
-}
-updateCartCount();
-</script>
+  <!-- ===== WhatsApp Floating Button ===== -->
+  <a href="https://wa.me/919837777006?text=Hi%20OTT%20WALLAH%2C%20I%20need%20help"
+     class="wa-float" target="_blank" aria-label="Chat on WhatsApp">
+    <i class="ri-whatsapp-fill"></i>
+  </a>
 
+  <script src="app.js"></script>
 </body>
 </html>
